--- a/HW_Prog2/HW_Prog2.vcxproj
+++ b/HW_Prog2/HW_Prog2.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="func.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
